Issue #16243: Fixed left column alignment

--- a/src/site/resources/css/site.css
+++ b/src/site/resources/css/site.css
@@ -159,6 +159,7 @@ th {
   display: flex;
   align-items: center;
   justify-content: flex-end;
+  margin-bottom: 5px !important;
 }
 
 #bodyColumn h2, h2 {
